// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippet > should import all lines 1`] = `
"<pre><code>plain text

# region test

test

# endregion text
</code></pre>
"
`;

exports[`snippet > should import all lines 2`] = `
"<pre><code class="language-html">&lt;!doctype html&gt;
&lt;html lang=&quot;zh-CN&quot;&gt;
  &lt;head&gt;
    &lt;meta charset=&quot;UTF-8&quot; /&gt;
    &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot; /&gt;
    &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot; /&gt;
    &lt;title&gt;Document&lt;/title&gt;
  &lt;/head&gt;
  &lt;body&gt;
    &lt;!-- region snippet --&gt;
    &lt;p&gt;
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, repellendus. Voluptatibus
      alias cupiditate at, fuga tenetur error officiis provident quisquam autem, porro facere! Neque
      quibusdam animi quaerat eligendi recusandae eaque.
    &lt;/p&gt;
    &lt;!-- endregion snippet --&gt;
    &lt;p&gt;
      Veniam harum illum natus omnis necessitatibus numquam architecto eum dignissimos, quos a
      adipisci et non quam maxime repellendus alias ipsum, vero praesentium laborum commodi
      perferendis velit repellat? Vero, cupiditate sequi.
    &lt;/p&gt;
  &lt;/body&gt;
&lt;/html&gt;
</code></pre>
"
`;

exports[`snippet > should import all lines 3`] = `
"<pre><code class="language-md">## Hello world

&lt;!-- #region snippet --&gt;

Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
inventore iure quo aut doloremque, ipsum ab voluptatem ipsa, velit laborum
illo quae omnis reiciendis hic, ut dolorem non debitis in!

&lt;!-- #endregion snippet --&gt;

Veniam harum illum natus omnis necessitatibus numquam architecto eum
dignissimos, quos a adipisci et non quam maxime repellendus alias ipsum,
vero praesentium laborum commodi perferendis velit repellat? Vero,
cupiditate sequi.
</code></pre>
"
`;

exports[`snippet > should import all lines 4`] = `
"<pre><code class="language-js">const { snippet } = require(&quot;@mdit/plugin-snippet&quot;);
const MarkdownIt = require(&quot;markdown-it&quot;);

// #region snippet
const mdIt = MarkdownIt().use(snippet, {
  // your options, currentPath is required
  currentPath: (env) =&gt; env.filePath,
});
// #endregion snippet

mdIt.render(&quot;&lt;&lt;&lt; snippet.js&quot;, {
  filePath: &quot;path/to/current/file.md&quot;,
});
</code></pre>
"
`;

exports[`snippet > should import all lines 5`] = `
"<pre><code class="language-ts">import { snippet } from &quot;@mdit/plugin-snippet&quot;;
import MarkdownIt from &quot;markdown-it&quot;;

// #region snippet
const mdIt = MarkdownIt().use(snippet, {
  // your options, currentPath is required
  currentPath: (env) =&gt; env.filePath,
});
// #endregion snippet

mdIt.render(&quot;&lt;&lt;&lt; snippet.ts&quot;, {
  filePath: &quot;path/to/current/file.md&quot;,
});
</code></pre>
"
`;

exports[`snippet > should import all lines 6`] = `
"<pre><code class="language-ts">export interface SnippetEnv extends Record&lt;string, any&gt; {
  /** included snippet files */
  snippetFiles?: string[];
}

// #region snippet
export interface MarkdownItSnippetOptions {
  /**
   * Get current filePath
   *
   * 获得当前文件路径
   *
   * @default (path) =&gt; path
   */

  currentPath: (env: SnippetEnv) =&gt; string;

  /**
   * handle include filePath
   *
   * 处理 include 文件路径
   *
   * @default (path) =&gt; path
   */

  resolvePath?: (path: string, cwd: string | null) =&gt; string;
}
// #endregion snippet
</code></pre>
"
`;

exports[`snippet > should import all lines 7`] = `
"<pre><code class="language-css">html,
body {
  margin: 0;
  padding: 0;
}

/* #region snippet */
h1 {
  font-size: 1.5rem;
}
/* #endregion snippet */

h2 {
  font-size: 1.2rem;
}
</code></pre>
"
`;

exports[`snippet > should import all lines 8`] = `
"<pre><code class="language-scss">html,
body {
  margin: 0;
  padding: 0;
}

/* #region snippet */
h1 {
  font-size: 1.5rem;
}

/* #endregion snippet */

h2 {
  font-size: 1.2rem;
}
</code></pre>
"
`;

exports[`snippet > should import all lines 9`] = `
"<pre><code class="language-less">html,
body {
  margin: 0;
  padding: 0;
}

/* #region snippet */
h1 {
  font-size: 1.5rem;
}

/* #endregion snippet */

h2 {
  font-size: 1.2rem;
}
</code></pre>
"
`;

exports[`snippet > should import all lines 10`] = `
"<pre><code class="language-cs">using System;

namespace HelloWorldApp {

    class Geeks {

        // #region snippet
        static void Main(string[] args) {

            // statement
            // printing Hello World!
            Console.WriteLine(&quot;Hello World!&quot;);

            // To prevents the screen from
            // running and closing quickly
            Console.ReadKey();
        }
        // #endregion snippet
    }
}
</code></pre>
"
`;

exports[`snippet > should import all lines 11`] = `
"<pre><code class="language-java">public class HelloWorld {
  // #region snippet
  public static void main(String args[]){
    System.out.println(&quot;Hello World&quot;);
  }
  // #endregion snippet
}
</code></pre>
"
`;

exports[`snippet > should import all lines 12`] = `
"<pre><code class="language-py">class MyClass:
    msg = &quot;world&quot;

    #region snippet
    def sayHello(self):
        print(&quot;Hello &quot; + self.msg + &quot;!&quot;)
    #region snippet

    def sayBye(self):
        print(&quot;Bye &quot; + self.msg + &quot;!&quot;)
</code></pre>
"
`;

exports[`snippet > should import all lines 13`] = `
"<pre><code class="language-vb">Imports System

Module Module1
   # Region snippet
   Sub Main()
     Console.WriteLine(&quot;Hello World!&quot;)
     Console.WriteLine(&quot;Press Enter Key to Exit.&quot;)
     Console.ReadLine()
   End Sub
   # EndRegion
End Module
</code></pre>
"
`;

exports[`snippet > should not be parsed as snippet markdown syntax 1`] = `
"<blockquote>
<blockquote>
<blockquote></blockquote>
</blockquote>
</blockquote>
<blockquote>
<p>&lt;&gt; test</p>
</blockquote>
<p>&lt;&gt;&lt; test</p>
<p>&lt;&lt; test</p>
"
`;

exports[`snippet > should not parse code block 1`] = `
"<pre><code>&lt;&lt;&lt; not-exisit.md#snippet{1-3}
</code></pre>
"
`;

exports[`snippet > should not parse code block 2`] = `
"<pre><code>&lt;&lt;&lt; not-exisit.md
</code></pre>
"
`;

exports[`snippet > should not parse code block 3`] = `
"<pre><code>&lt;&lt;&lt; not-exisit.md#snippet
</code></pre>
"
`;

exports[`snippet > should not parse code block 4`] = `
"<pre><code>&lt;&lt;&lt; not-exisit.md{1-3}
</code></pre>
"
`;

exports[`snippet > should not parse code block 5`] = `
"<pre><code>&lt;&lt;&lt; not-exisit.md#snippet{1-3}
</code></pre>
"
`;

exports[`snippet > should not parse code block 6`] = `
"<pre><code>&lt;&lt;&lt; not-exisit.md
</code></pre>
"
`;

exports[`snippet > should not parse code block 7`] = `
"<pre><code>&lt;&lt;&lt; not-exisit.md#snippet
</code></pre>
"
`;

exports[`snippet > should not parse code block 8`] = `
"<pre><code>&lt;&lt;&lt; not-exisit.md{1-3}
</code></pre>
"
`;

exports[`snippet > should support region 1`] = `
"<pre><code>plain text

# region test

test

# endregion text
</code></pre>
"
`;

exports[`snippet > should support region 2`] = `
"<pre><code class="language-html">&lt;p&gt;
  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, repellendus. Voluptatibus
  alias cupiditate at, fuga tenetur error officiis provident quisquam autem, porro facere! Neque
  quibusdam animi quaerat eligendi recusandae eaque.
&lt;/p&gt;</code></pre>
"
`;

exports[`snippet > should support region 3`] = `
"<pre><code class="language-md">
Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
inventore iure quo aut doloremque, ipsum ab voluptatem ipsa, velit laborum
illo quae omnis reiciendis hic, ut dolorem non debitis in!
</code></pre>
"
`;

exports[`snippet > should support region 4`] = `
"<pre><code class="language-js">const mdIt = MarkdownIt().use(snippet, {
  // your options, currentPath is required
  currentPath: (env) =&gt; env.filePath,
});</code></pre>
"
`;

exports[`snippet > should support region 5`] = `
"<pre><code class="language-ts">const mdIt = MarkdownIt().use(snippet, {
  // your options, currentPath is required
  currentPath: (env) =&gt; env.filePath,
});</code></pre>
"
`;

exports[`snippet > should support region 6`] = `
"<pre><code class="language-ts">export interface MarkdownItSnippetOptions {
  /**
   * Get current filePath
   *
   * 获得当前文件路径
   *
   * @default (path) =&gt; path
   */

  currentPath: (env: SnippetEnv) =&gt; string;

  /**
   * handle include filePath
   *
   * 处理 include 文件路径
   *
   * @default (path) =&gt; path
   */

  resolvePath?: (path: string, cwd: string | null) =&gt; string;
}</code></pre>
"
`;

exports[`snippet > should support region 7`] = `
"<pre><code class="language-css">h1 {
  font-size: 1.5rem;
}</code></pre>
"
`;

exports[`snippet > should support region 8`] = `
"<pre><code class="language-scss">h1 {
  font-size: 1.5rem;
}
</code></pre>
"
`;

exports[`snippet > should support region 9`] = `
"<pre><code class="language-less">h1 {
  font-size: 1.5rem;
}
</code></pre>
"
`;

exports[`snippet > should support region 10`] = `
"<pre><code class="language-cs">static void Main(string[] args) {

    // statement
    // printing Hello World!
    Console.WriteLine(&quot;Hello World!&quot;);

    // To prevents the screen from
    // running and closing quickly
    Console.ReadKey();
}</code></pre>
"
`;

exports[`snippet > should support region 11`] = `
"<pre><code class="language-java">public static void main(String args[]){
  System.out.println(&quot;Hello World&quot;);
}</code></pre>
"
`;

exports[`snippet > should support region 12`] = `
"<pre><code class="language-py">class MyClass:
    msg = &quot;world&quot;

    #region snippet
    def sayHello(self):
        print(&quot;Hello &quot; + self.msg + &quot;!&quot;)
    #region snippet

    def sayBye(self):
        print(&quot;Bye &quot; + self.msg + &quot;!&quot;)
</code></pre>
"
`;

exports[`snippet > should support region 13`] = `
"<pre><code class="language-vb">Imports System

Module Module1
   # Region snippet
   Sub Main()
     Console.WriteLine(&quot;Hello World!&quot;)
     Console.WriteLine(&quot;Press Enter Key to Exit.&quot;)
     Console.ReadLine()
   End Sub
   # EndRegion
End Module
</code></pre>
"
`;
